--- a/src/partials/PORTAL/4_novedades/4_2_1.html
+++ b/src/partials/PORTAL/4_novedades/4_2_1.html
@@ -1,4 +1,4 @@
-<form
+<!-- <form
   id="pg:fm"
   name="pg:fm"
   method="post"
@@ -240,7 +240,7 @@
   </div>
   <div id="pg:fm:j_id31"></div>
 </form>
-<div class="divider">01</div>
+<div class="divider">01</div> -->
 <form
   id="pg:fm"
   name="pg:fm"
