--- a/src/partials/faqs/faq_6.html
+++ b/src/partials/faqs/faq_6.html
@@ -50,7 +50,7 @@
         </h4>
         <div class="fqs_info">
           <p>
-            Si eres pensionado por invalidez o sobrevivencia cuentas con un
+            Si eres pensionado por invalidez cuentas con un
             auxilio funerario y en caso de fallecimiento del asegurado, quien
             haya incurrido con los gastos funerarios podría recibir el valor
             equivalente a la normativa colombiana.
