--- a/src/partials/faqs/faq_6.html
+++ b/src/partials/faqs/faq_6.html
@@ -53,7 +53,7 @@
             Si eres pensionado por invalidez cuentas con un
             auxilio funerario y en caso de fallecimiento del asegurado, quien
             haya incurrido con los gastos funerarios podría recibir el valor
-            equivalente a la normativa colombiana.?
+            equivalente a la normativa colombiana.
           </p>
         </div>
       </div>
