--- a/src/partials/PORTAL/4_novedades/4_1_3.html
+++ b/src/partials/PORTAL/4_novedades/4_1_3.html
@@ -2548,7 +2548,7 @@
   <div class="apexp">
     <div
       id="pg:fm:pb"
-      class="bPageBlock brandSecondaryBrd apexDefaultPageBlock secondaryPalette caja"
+      class="bPageBlock brandSecondaryBrd apexDefaultPageBlock secondaryPalette"
     >
       <script>
         function twistSection(elem, sectionId) {
