--- a/src/css/portal.css
+++ b/src/css/portal.css
@@ -1200,19 +1200,40 @@ body {
         }
       }
       .news {
+        @apply prose-lg;
+        h1 {
+          @apply text-azul-bold text-4xl font-je flex gap-3;
+          &::before {
+            content: "\f061";
+            font-family: "Font Awesome 5 Pro";
+            @apply text-azul-bright2;
+          }
+        }
+        h2 {
+          @apply mt-0 text-4xl !text-azul-mid font-je mb-4;
+        }
+        h4 {
+          @apply mt-0 text-azul-bold !text-3xl font-je mb-4;
+        }
         h3 {
-          @apply text-azul-bold text-3xl font-je mb-4;
+          @apply mt-0 text-azul-bold text-2xl font-je mb-4;
         }
         p {
           @apply text-azul-dark text-lg leading-tight;
         }
         img {
-          @apply w-full my-4 h-80 object-contain bg-azul-bg rounded-xl;
+          @apply max-w-2xl w-full my-4 mx-auto rounded-xl border border-alpha-30;
         }
         li {
           @apply list-inside py-2 list-image-star-xs;
           a {
             @apply inline-block pb-1 text-base text-azul-bold underline underline-offset-2 hover:text-azul-dark;
+          }
+        }
+        ul.link {
+          @apply pl-0;
+          li {
+            @apply !list-none !list-image-none !my-0;
           }
         }
         table {
