--- a/src/partials/PORTAL/p_home_articulo.html
+++ b/src/partials/PORTAL/p_home_articulo.html
@@ -1,8 +1,8 @@
 <li class="service_link">
   <h3>{{title}}</h3>
-  <img src="/assets/images/PORTAL/{{image}}" />
+  <img src="/assets/images/{{image}}" />
   <p>{{content}}</p>
-  <a href="/PORTAL/articulo.html" class="as__button small">
+  <a href="/PORTAL/articulo_{{num}}.html" class="as__button small">
     <span>VER MÁS</span>
     <i role="presentation" class="fa-light fa-arrow-right"></i>
   </a>
